; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_mach.c_PpcFindDevice.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_mach.c_PpcFindDevice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PpcFindDevice.buf = internal global [256 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"%c Name: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"- No name attribute for %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PpcFindDevice(i32 %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 0, i32* %10, align 4
  store i32 0, i32* %11, align 4
  store i32 0, i32* %12, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @ofw_child(i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @ofw_getprop(i32 %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([256 x i8], [256 x i8]* @PpcFindDevice.buf, i64 0, i64 0), i32 256)
  store i32 %17, i32* %11, align 4
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @strlen(i8* %19)
  %21 = call i32 @strncmp(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @PpcFindDevice.buf, i64 0, i64 0), i8* %18, i32 %20)
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %12, align 4
  %25 = load i32*, i32** %9, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %32, label %27

27:                                               ; preds = %4
  %28 = load i32, i32* %12, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %27
  %31 = load i32, i32* %7, align 4
  store i32 %31, i32* %5, align 4
  br label %82

32:                                               ; preds = %27, %4
  store i32 0, i32* %13, align 4
  br label %33

33:                                               ; preds = %39, %32
  %34 = load i32, i32* %13, align 4
  %35 = load i32, i32* %6, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %42

37:                                               ; preds = %33
  %38 = call i32 @PpcOfwPutChar(i8 signext 32)
  br label %39

39:                                               ; preds = %37
  %40 = load i32, i32* %13, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %13, align 4
  br label %33

42:                                               ; preds = %33
  %43 = load i32, i32* %6, align 4
  %44 = icmp eq i32 %43, 1
  br i1 %44, label %45, label %58

45:                                               ; preds = %42
  %46 = load i32, i32* %11, align 4
  %47 = icmp sgt i32 %46, 0
  br i1 %47, label %48, label %54

48:                                               ; preds = %45
  %49 = load i32, i32* %12, align 4
  %50 = icmp ne i32 %49, 0
  %51 = zext i1 %50 to i64
  %52 = select i1 %50, i32 42, i32 32
  %53 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %52, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @PpcFindDevice.buf, i64 0, i64 0))
  br label %57

54:                                               ; preds = %45
  %55 = load i32, i32* %7, align 4
  %56 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32 %55)
  br label %57

57:                                               ; preds = %54, %48
  br label %58

58:                                               ; preds = %57, %42
  br label %59

59:                                               ; preds = %78, %58
  %60 = load i32, i32* %12, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %65, label %62

62:                                               ; preds = %59
  %63 = load i32, i32* %10, align 4
  %64 = icmp ne i32 %63, 0
  br label %65

65:                                               ; preds = %62, %59
  %66 = phi i1 [ false, %59 ], [ %64, %62 ]
  br i1 %66, label %67, label %81

67:                                               ; preds = %65
  %68 = load i32, i32* %6, align 4
  %69 = add nsw i32 %68, 1
  %70 = load i32, i32* %10, align 4
  %71 = load i8*, i8** %8, align 8
  %72 = load i32*, i32** %9, align 8
  %73 = call i32 @PpcFindDevice(i32 %69, i32 %70, i8* %71, i32* %72)
  store i32 %73, i32* %13, align 4
  %74 = load i32, i32* %13, align 4
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %76, label %78

76:                                               ; preds = %67
  %77 = load i32, i32* %13, align 4
  store i32 %77, i32* %5, align 4
  br label %82

78:                                               ; preds = %67
  %79 = load i32, i32* %10, align 4
  %80 = call i32 @ofw_peer(i32 %79)
  store i32 %80, i32* %10, align 4
  br label %59

81:                                               ; preds = %65
  store i32 0, i32* %5, align 4
  br label %82

82:                                               ; preds = %81, %76, %30
  %83 = load i32, i32* %5, align 4
  ret i32 %83
}

declare dso_local i32 @ofw_child(i32) #1

declare dso_local i32 @ofw_getprop(i32, i8*, i8*, i32) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @PpcOfwPutChar(i8 signext) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @ofw_peer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
